# beef

./: Cargo.toml
src/: generic.rs  lean.rs  lib.rs  serde.rs  traits.rs  wide.rs
