[package]
name = "beef"
version = "0.5.1"
authors = ["Maciej Hirsz <hello@maciej.codes>"]
edition = "2018"
description = "More compact Cow"
repository = "https://github.com/maciejhirsz/beef"
documentation = "https://docs.rs/beef/"
license = "MIT OR Apache-2.0"
readme = "./README.md"
keywords = ["cow", "borrow", "str", "slice"]
categories = ["no-std", "memory-management"]

[dependencies]
serde = { version = "1.0.105", default-features = false, features = ["alloc"], optional = true }

[dev-dependencies]
serde_derive = "1.0.105"
serde_json = "1.0"

[features]
std = []
default = []

[profile.bench]
opt-level = 3
debug = false
lto = 'fat'
debug-assertions = false
codegen-units = 1
